# Noita-Component-Explorer

./: .gitignore  CMakeLists.txt  README.md  components.lua  configs.lua  incr_version.sh  init.lua  mod.xml.in  serialise_component.lua  version.lua  workshop_preview_image.xcf
.github/workflows/: build.yml
codegen/: gen.py
component-explorer/: comp_tag_util.lua  component_fields.lua  component_windows.lua  components.lua  configs.lua  configure_globals.lua  cursor.lua  debug.lua  entity.lua  entity_list.lua  entity_markers.lua  entity_picker.lua  eval.lua  field_enums.lua  file_viewer.lua  globals.lua  herd_relation.lua  imgui_warning.lua  imgui_warning.xml  init.lua  link_ui.lua  load_menu_extensions.lua  logger.lua  lua_console.lua  magic_number_items.lua  magic_numbers.lua  main.lua  matinv_field.lua  menu_extensions.lua  mod.xml  mod_id.txt  mod_settings.lua  noita_version.lua  preset_wands.lua  repeat_scripts.lua  run_flags.lua  serialise_component.lua  serialise_component_fields.lua  serialise_entity.lua  settings.lua  (+18 more)
component-explorer/animation_viewer/: anim_parser.lua  anim_viewer.lua
component-explorer/entities/: entity_marker.xml  imgui_warning.xml
component-explorer/entities/entity_marker/: init.lua  marker.xml
component-explorer/lib/: global_flag.lua  ui_callbacks.lua
component-explorer/mod_setting_modals/: create.lua  delete.lua  edit.lua
component-explorer/spawn_data/: README_MOD_DEVS.txt  actions.lua  creatures.lua  items.lua  materials.lua  perks.lua  props.lua
component-explorer/spawn_stuff/: creatures.lua  items.lua  materials.lua  perks.lua  props.lua  spells.lua
component-explorer/ui/: combo.lua  help.lua  helpers.lua  im.lua  link.lua
component-explorer/unsafe/: debug.lua  init.lua  logger.lua  magic_number_items.lua  magic_numbers.lua  main.lua  memory_display.lua  memory_type.lua  noita_version.lua  o_world_state.lua  ouroboros.lua  stl.lua  user_scripts.lua  user_scripts_window.lua  win32.lua
component-explorer/unsafe/appends/: globals.lua  link.lua  link_ui.lua  lua_console.lua  main.lua  user_scripts.lua
component-explorer/utils/: beta_version.lua  ce_settings.lua  copy.lua  eval.lua  file_util.lua  lua_appends.lua  math_util.lua  matutil.lua  noita_version.lua  player_util.lua  settings_util.lua  stringify.lua  strings.lua  tcsv.lua  wiki.lua  wiki_spell_names.lua  wiki_wand.lua  win32.lua
component_parser/: parse.py
data/: component_beta_documentation.json  component_documentation.json  component_main_documentation.json  configs.json  configs_main.json  field_infos.json
modders-delight/: mod.xml
packaging/: CMakeLists.txt
unsafe-explorer/: init.lua  mod.xml
